# aula08_bootcamp

./: etl.py  pipeline.py  pyproject.toml
data_processed/: dados.parquet
